gcc-defaults (1.110) unstable; urgency=low

  * Default to 4.6 for alpha (Michael Cree). Closes: #649922.
  * Default to 4.6 for m68k, except gij/gcj (Thorsten Glaser).

 -- Matthias Klose <doko@debian.org>  Sat, 10 Dec 2011 21:26:12 +0100

gcc-defaults (1.109) unstable; urgency=low

  * Bump GCC 4.6 versions to 4.6.2.
  * Default to 4.6 for powerpcspe (Kyle Moffett). Closes: #647456.

 -- Matthias Klose <doko@debian.org>  Thu, 24 Nov 2011 13:19:06 +0100

gcc-defaults (1.108) unstable; urgency=low

  [ Matthias Klose ]
  * debian/rules: Remove duplicate code.
  * Fix libgcj.pc symlink for multiarch builds.
  * Fix upgrade path (/usr/include/asm must be a symlink). Closes: #638418.
  
  [ Aurelien Jarno ]
  * Add support for s390x.

 -- Matthias Klose <doko@debian.org>  Sat, 24 Sep 2011 16:55:44 +0200

gcc-defaults (1.107) unstable; urgency=low

  * Enable multiarch build for libgcj-bc. Closes: #633359.
  * Don't care about gc[cj]-4.6 build dependencies on m68k.
  * Fix last references to obsolete gcj package.

 -- Matthias Klose <doko@debian.org>  Sat, 09 Jul 2011 19:23:28 +0200

gcc-defaults (1.106) unstable; urgency=low

  * Bump GCC 4.6 versions to 4.6.1.
  * Bump GCC 4.4 versions to 4.4.6.
  * Default to 4.6 for sh4 (Nobuhiro Iwamatsu). Closes: #633073.
  * Default to 4.6 for ia64 (email exchange with Bdale Garbee).
  * Default to 4.6 for sparc64 (Aurelian Jarno).
  * Default to 4.6 for sparc. Last "supported" architecture in Debian
    using GCC 4.4, but unmaintained by the Debian GCC maintainers.
  * Make cpp Multi-Arch: allowed. Closes: #630853.
  * cpp: Don't call update-alternatives on upgrade. Closes: #568299.

 -- Matthias Klose <doko@debian.org>  Sat, 09 Jul 2011 15:59:53 +0200

gcc-defaults (1.105) unstable; urgency=low

  * Build libgcj-bc for multiarch. Closes: #630417.

 -- Matthias Klose <doko@debian.org>  Thu, 16 Jun 2011 23:47:48 +0200

gcc-defaults (1.104) unstable; urgency=low

  * Bump libgcj version for gcj-4.6. Closes: #624632.