@@ -45,7 +45,7 @@ making sure you are always using the one preferred for that
 architecture. To use the other compiler, simply set CC=gcc-4.1, or
 similar.
 
-The default compiler versions for Debian GNU/Linux on i386 are
+The default compiler versions for Debian GNU/Linux on amd64 are
 (minor version numbers omitted):
 
 	cpp		: cpp-4.6
